<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ptolemy</string>
    <string name="touchstone_login">Log into your Kerberos account to import classes you are registered for this semester.\n\nFor a test run, try username \"benbitdiddle\" with password \"6570\".</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="login_button">Import Classes</string>
    <string name="instructions"> This is the test page for our app. Click the buttons in succession to see the implemented functionality... NOTE: wait for notification before proceeding!. The core of the app is in \"View the Map.\"; don\'t forget to click the buttons in the action bar!
       \nMost of the current functionality is in bookmarks.
        </string>

    <!-- AddClassActivity -->
    <string name="class_title">Title:</string>
    <string name="class_title_hint">Title (hint: try \'6.006\')</string>
    <string name="pick_place_hint">Pick a location</string>
    <string name="class_room_hint">Room #</string>
    <string name="room_browse_button">Browse</string>

    <!--  Filter bar -->
    <string name="athena_filter">Filter by Athena</string>
    <string name="br_male_filter">Filter by Male Toilet</string>
    <string name="br_female_filter">Filter by Female Toilet</string>
    <string name="classroom_filter">Filter by Classroom</string>
    
    <!-- Menu -->
    <string name="search">search</string>
    <string name="home">home</string>
    <string name="bookmarks">bookmarks</string>
    <string name="back">back</string>
    <string name="centre">centre</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="sync_bookmark">Sync Bookmarks</string>
    <string name="save_bookmark">Save Bookmark</string>
    <string name="bookmark_type_prompt">Pick the bookmark type:</string>
    <string name="close">close</string>

    <string-array name="bookmark_types">
        <item>Lecture</item>
        <item>Recitation</item>
        <item>Office hours</item>
        <item>None of the above</item>
    </string-array>

    <string name="type_button_empty">></string>
    <string name="enter_title">«  Enter a title!</string>
    <string name="room_not_found">The classroom \'%1$s\' could not be found. Try again with a room number like 10–250.</string>

    <string name="empty_bookmarks">You have no bookmarks. Go add some!\n\nIf you have a Kerberos account, try importing classes based on your current registration:</string>
    <string name="more_bookmarks">Import classes from registration</string>
    <string name="bookmarks_help">Try long-pressing on a bookmark to edit or delete it.</string>
    <string name="empty_nearest">Couldn\'t find anything nearby. Sorry!</string>
    <string name="edit_bookmark">Edit Bookmark</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="navigate">navigate</string>
    <string name="loading">Loading Ptolemy...</string>
    <string name="wifi_nag_text">Ptolemy uses WiFi data to pinpoint your location on MIT campus, as GPS can be very inaccurate indoors.  Your WiFi is currently off - would like Ptolemy to enable it for you?</string>
    <string name="wifi_nag_title">Wifi Location Sources</string>
    <string name="wifi_nag_positive">Ok</string>
    <string name="wifi_nag_negative">Cancel</string>
    
    <string name="search_hint">Search rooms or classes</string>
    <string name="search_hint_rooms">Search rooms</string>

</resources>
