<?xml version="1.0" encoding="utf-8"?>
<!-- STATIC BAR, DOESN'T DO ANYTHING. FOR THE DYNAMIC BAR LOOK AT menu_nav.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Nav" >

    <ImageButton
        android:id="@+id/homeButton"
        android:contentDescription="@string/home"
        style="@style/NavButtonHome" />

    <TextView
        android:id="@+id/navTitle"
        style="@style/NavTitle"
        android:layout_toRightOf="@+id/homeButton"
        android:text="@string/app_name" />
    
    <ImageButton
        style="@style/NavButton"
        android:id="@+id/searchbutton"
        android:src="@drawable/ic_menu_search"
        android:contentDescription="@string/search"
        android:layout_toLeftOf="@+id/bookmarksbutton"
        android:onClick="showSearch" />
    
    <ImageButton
        style="@style/NavButton"
        android:id="@+id/bookmarksbutton"
        android:src="@drawable/ic_menu_bookmark"
        android:contentDescription="@string/bookmarks"
        android:layout_alignParentRight="true"
        android:onClick="showBookmarks" />

</RelativeLayout>