<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pt="http://schemas.android.com/apk/res/edu.mit.pt"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/nav"
        layout="@layout/menu_home" />

    <edu.mit.pt.maps.FloorMapView
        android:id="@+id/floormapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/nav"
        android:apiKey="@string/map_key"
        android:clickable="true" />
	 
	 <LinearLayout
        android:id="@+id/filter_view"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
	        <RelativeLayout
	            android:id="@+id/athena_full"
	            android:layout_weight="1"
	        	android:layout_width="0dip"
	        	android:layout_height="wrap_content">
		        <ToggleButton
		            android:id="@+id/athena_filter_btn"
		            android:layout_width="match_parent"
		            android:layout_height="48dp"
		            android:textOn=""
		            android:textOff=""
		            android:layout_alignParentBottom="true"
		            android:background="@drawable/athena_toggle_btn"
		            android:contentDescription="@string/athena_filter"
		            />
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:singleLine="true"
		            android:layout_alignParentBottom="true"
		            android:text="Athena"
		            android:textColor="#FFFFFF"
		            android:textSize="16dp"
		            />
	        </RelativeLayout>
	

	        <RelativeLayout
	            android:id="@+id/classroom_full"
	            android:layout_weight="1"
	        	android:layout_width="0dip"
	        	android:layout_height="wrap_content">
		        <ToggleButton
		            android:id="@+id/classroom_filter_btn"
		            android:layout_width="match_parent"
		            android:layout_height="48dp"
		            android:textOn=""
		            android:textOff=""
		            android:layout_alignParentBottom="true"
		            android:background="@drawable/classroom_toggle_btn"
		            android:contentDescription="@string/classroom_filter"
		            />
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:singleLine="true"
		            android:layout_alignParentBottom="true"
		            android:text="Classroom"
		            android:textColor="#FFFFFF"
		            android:textSize="16dp"
		            />
	        </RelativeLayout>
	    
        <RelativeLayout
	            android:id="@+id/br_male_full"
	            android:layout_weight="1"
	        	android:layout_width="0dip"
	        	android:layout_height="wrap_content">
		        <ToggleButton
		            android:id="@+id/br_male_filter_btn"
		            android:layout_width="match_parent"
		            android:layout_height="48dp"
		            android:textOn=""
		            android:textOff=""
		            android:layout_alignParentBottom="true"
		            android:background="@drawable/br_male_toggle_btn"
		            android:contentDescription="@string/br_male_filter"
		            />
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:singleLine="true"
		            android:layout_alignParentBottom="true"
		            android:text="Toilet (M)"
		            android:textColor="#FFFFFF"
		            android:textSize="16dp"
		            />
	    </RelativeLayout>
                <RelativeLayout
	            android:id="@+id/br_female_full"
	            android:layout_weight="1"
	        	android:layout_width="0dip"
	        	android:layout_height="wrap_content">
		        <ToggleButton
		            android:id="@+id/br_female_filter_btn"
		            android:layout_width="match_parent"
		            android:layout_height="48dp"
		            android:textOn=""
		            android:textOff=""
		            android:layout_alignParentBottom="true"
		            android:background="@drawable/br_female_toggle_btn"
		            android:contentDescription="@string/br_female_filter"
		            />
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:singleLine="true"
		            android:layout_alignParentBottom="true"
		            android:text="Toilet (F)"
		            android:textColor="#FFFFFF"
		            android:textSize="16dp"
		            />
	    </RelativeLayout>
    </LinearLayout>
    
	 
    <RelativeLayout
        android:id="@+id/meta_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/place_confirm_button"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/navigate_bg"
            android:contentDescription="@string/navigate"
            android:src="@drawable/ic_menu_navigate" />

        <TextView
            android:id="@+id/place_confirm_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/place_confirm_button"
            android:layout_toLeftOf="@+id/place_extra_button"
            android:background="@drawable/black_50"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:textColor="#FFF"
            android:textSize="16dp"
            android:clickable="true"
            android:onClick="moveToFocusedPlace" />
        
        <ImageButton
            android:id="@+id/place_extra_button"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/add_bookmark"
            android:background="@drawable/navigate_bg"
            android:onClick="handleExtraButtonClick"
            android:src="@drawable/ic_menu_bookmark_add" />
    </RelativeLayout>

</RelativeLayout>