<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <EditText
        android:id="@+id/edit_class_title"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:textSize="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="0dp"
        android:hint="@string/class_title_hint" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="8dp"
        android:paddingTop="0dp"
        android:layout_marginBottom="0dp"
        android:ellipsize="end"
        android:text="@string/class_name" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        >

        <RadioButton
            android:id="@+id/radio_lec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lec" />

        <RadioButton
            android:id="@+id/radio_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rec" />

        <RadioButton
            android:id="@+id/radio_oth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Other" />
    </RadioGroup>
    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" >

        <EditText
            android:id="@+id/edit_class_room_no"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/ButtonLogin"
            android:hint="@string/class_room_hint"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            
            />

        <Button
            android:id="@+id/ButtonLogin"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_alignParentRight="true"
            android:onClick="loginTouchstone"
            android:text="@string/room_browse_button" />''
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="287dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/x158608y193914" />

</LinearLayout>